<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tech.pardus</groupId>
	<artifactId>pardus-tools-starter-parent</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>PardusToolsStarterParent</name>
	<description>
		Parent Project For the Common Tools
	</description>
	<url>https://github.com/edtoktay/pardus-tools-starter-parent</url>
	<issueManagement>
		<url>https://github.com/edtoktay/pardus-tools-starter-parent/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/edtoktay/pardus-tools-starter-parent</url>
		<connection>scm:git:https://github.com/edtoktay/pardus-tools-starter-parent</connection>
		<developerConnection>scm:git:https://github.com/edtoktay/pardus-tools-starter-parent</developerConnection>
		<tag>pardus-tools-starter-parent-1.0.0</tag>
	</scm>
	<developers>
		<developer>
			<email>deniz.toktay@pardus.tech</email>
			<name>Eren Deniz TOKTAY</name>
			<url>https://github.com/edtoktay</url>
			<id>edtoktay</id>
		</developer>
	</developers>
	<properties>
		<java.version>17</java.version>
		<default.encode>UTF-8</default.encode>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<project.build.sourceEncoding>${default.encode}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${default.encode}</project.reporting.outputEncoding>

		<common.lang.version>3.12.0</common.lang.version>
		<common.collection.version>4.4</common.collection.version>
		<common.text.version>1.9</common.text.version>
		<slf4j.version>1.7.32</slf4j.version>

		<project.test.result.directory>${project.build.directory}/test-results</project.test.result.directory>
		<sonar.host.url>http://localhost:9000</sonar.host.url>
		<sonar.login>admin</sonar.login>
		<sonar.password>2864231</sonar.password>
		<sonar.scm.provider>git</sonar.scm.provider>
		<sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
		<sonar.coverage.jacoco.xmlReportPaths>${project.test.result.directory}/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.exclusions>
			**/*.xml
		</sonar.exclusions>
		<sonar.coverage.exclusions>
			**/qualitymeasurementsample/*
		</sonar.coverage.exclusions>
		<spring.boot.version>2.6.2</spring.boot.version>
	</properties>
	<modules>
		<module>java-utilities</module>
		<module>spring-utilities</module>
		<module>spring-rule-flow-manager</module>
		<module>spring-security</module>
	</modules>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.2.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-scm-plugin</artifactId>
						<version>1.8.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>6.0.5</version>
			</plugin>			
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalJOption>-Xdoclint:none</additionalJOption>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.7.0.1746</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>${jacocoArgLine}</argLine>
					<reportsDirectory>${project.test.result.directory}/surefire</reportsDirectory>
					<useSystemClassLoader>false</useSystemClassLoader>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>pre-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>jacocoArgLine</propertyName>
							<destFile>${project.test.result.directory}/jacoco/jacoco.exec</destFile>
						</configuration>
					</execution>
					<execution>
						<id>post-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.test.result.directory}/jacoco/jacoco.exec</dataFile>
							<outputDirectory>${project.test.result.directory}/jacoco</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
